# ThePizzaConundrumProblem

./: .gitignore  InstallMe.ipynb  LICENSE  README.md  RunMeProd.ipynb  RunMeProd.py  Script_PloomberBuild.py  Script_PloomberBuildForceNoCaching.py  Script_PloomberPlot.py  Script_UvRunPytest.bat  Script_UvSync.bat  Script_WingetInstallUv.bat  changelog.txt  pyproject.toml  ruff.toml
myPipeline/: .gitignore  DiagramOfProcessFlow.html  env.yaml  list.of.common.tasks.yaml  pipeline.report.yaml  pipeline.yaml
myPipeline/tasks/: CommonFunctions.py  ConstantsFromEnvFileParams.py  ConstantsFromFilePaths.py  IngestData1.py  IngestPizzaData.py  ProcessToDoCalc1.py  TurnResultIntoExcel.py
src/ploomberpipelinetemplate/: ConstantsDataModule.py  EnvFileDataModule.py  PizzaDataModule.py  PizzaFromRomansDataModule.py  PizzaFunctionsModule.py
src/thepizzaconundrumproblem/: ConstantsDataModule.py  ConstantsForFilePathsDataModule.py  EnvFileDataModule.py  PipelineFunctionsModule.py  PizzaFromNySliceDataModule.py  PizzaFromRomansDataModule.py  PizzaFunctionsModule.py  __init__.py
