[project]
name = "thepizzaconundrumproblem"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TimothyAllman", email = "166746823+TimothyAllman@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3", #for data manipulations
]

[dependency-groups]
dev = [
    "uv",        #for pacakge managemnt and dependecy resolution
    "ipykernel", #for running notebook cells in vscode
    "pytest",    #for testing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
